--- a/Figuras-Folder/figuras.html
+++ b/Figuras-Folder/figuras.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./figuras.js"></script>
+    <link rel="stylesheet" href="./figuras.css">
     <title>Figuras Geometricas | Curso practico de JavaScript</title>
     
 </head>
@@ -14,34 +15,34 @@
         <p>Este es el primer taller del curso práctico de JavaScript</p>
     </header>
     <main>
-        <section>
+        <section class="main-article">
             <h2>Calcula el area y el perimetro de un cuadrado.</h2>
-            <form action="">
-                <label for="Input-Cuadrado">Escribe cuanto mide cada lado de tu cuadrado:</label>
-                <input id="Input-Cuadrado" type="number">
+            <form action="" class="main-form">
+                <label >Escribe cuanto mide cada lado de tu cuadrado:  <input id="Input-Cuadrado" type="number"></label>
+               
                 <button  type="button" onclick="squarePerimeter()">Calcular el perimetro</button>
-                <button  type="button" onclick="calcularÁreaCuadrado()">Calcular el área</button>
+                <button  type="button" onclick="squareÁrea()">Calcular el área</button>
             </form>
         </section>
-        <section>
+        <section class="main-article">
             <h2>Calcular el perimetro y el área del triangulo.</h2>
-            <form action="">
-                <label for="Input-Triangulo_lado1">Escribe cuanto mide el Primer  lado: </label><input id="Input-Triangulo_lado1" type="number"><br>
+            <form action="" class="main-form">
+                <label class="article_label"  for="Input-Triangulo_lado1">Escribe cuanto mide el Primer  lado: </label><input id="Input-Triangulo_lado1" type="number"><br>
                 <label for="Input-Triangulo_lado2">Escribe cuanto mide el Segundo lado: </label><input id="Input-Triangulo_lado2" type="number"><br>
                 <label for="Input-Triangulo_base">Escribe cuanto mide la Base : </label><input id="Input-Triangulo_base" type="number"><br>
                 <label for="Input-Triangulo_altura">Escribe cuanto es la altura : </label><input id="Input-Triangulo_altura" type="number">
-                <button  type="button" onclick="calcularPerimetroTriangulo()">Calcular el perimetro</button>
-                <button  type="button" onclick="calcularÁreaTriangulo()">Calcular el área</button>
+                <button  type="button" onclick="trianglePerimeter()">Calcular el perimetro</button>
+                <button  type="button" onclick="triangleÁrea()">Calcular el área</button>
             </form>
-        </section>
-        <section>
+        </section >
+        <section class="main-article">
             <h2>Calcular el diametro, perimetro y área del circulo.</h2>
-            <form action="">
+            <form action="" class="main-form">
                 <label>Escriba el radio del circulo: <input type="number" id="Input-Circulo_radio">
                 </label>
-                <button  type="button" onclick="calcularDiametroCirculo()">Calcular el diametro</button>
-                <button  type="button" onclick="calcularPerimetroCirculo()">Calcular el perimetro</button>
-                <button  type="button" onclick="calcularÁreaCirculo()">Calcular el área</button>
+                <button  type="button" onclick="circleDiameter()">Calcular el diametro</button>
+                <button  type="button" onclick="circlePerimeter()">Calcular el perimetro</button>
+                <button  type="button" onclick="circleÁrea()">Calcular el área</button>
             </form>
         </section>
     </main>
